# Change Log
[ToLaserBlade (Fabric)](https://www.curseforge.com/minecraft/mc-mods/tolaserblade-fabric).
[Source](https://github.com/Iunius118/ToLaserBlade-Fabric).

## [Unreleased]
### Changed
- Require Fabric Loader 0.14.23+ and Fabric API 0.90.0+.

## [3.0.0]
### Changed
- Update to Minecraft 1.20.2.
- Require Fabric Loader 0.14.22+ and Fabric API 0.89.2+.
- Require Cloth Config 12.0.109+.

## [2.0.0]
### Changed
- Update to Minecraft 1.20.1.
- Require Fabric API 0.86.0+.
- Require Cloth Config 11.1.106+.
- Version scheme.

## [1.20-1.0.0.0]
### Added
- French (fr_fr) translation (thanks to Calvineries).

### Changed
- Update to Minecraft 1.20.
- Require Fabric Loader 0.14.21+.
- Require Fabric API 0.83.0+1.20+.

## [1.20-pre6-1.0.0.0-beta.1]
### Changed
- Update to Minecraft 1.20-pre6.
- Require Fabric Loader 0.14.20+.
- Require Fabric API 0.82.1+1.20+.
- Require Cloth Config 11.0.97+.
- All smithing recipes require Laser Blade Blueprint as template.

## [1.19.4-0.8.1.0]
### Added
- LaserBladeModelRegistrationCallback to ToLaserBlade API.
- LaserBladeState to ToLaserBlade API.

### Changed
- Require Fabric API 0.81.1+1.19.4+.
- Update ToLaserBladeAPI.

## [1.19.4-0.8.0.0]
### Changed
- Update to Minecraft 1.19.4.
- Require Fabric API 0.75.3+1.19.4+.
- Require Cloth Config 10.0.96+.

### Fixed
- LaserBladeModel in ToLaserBlade API.

## [1.19.3-0.7.1.0]
### Added
- Laser blades of additional shapes to creative mode tab.
- Model information to item tooltip of laser blade.

## [1.19.3-0.7.0.4]
### Changed
- Require Fabric API 0.72.0+1.19.3+.

## [1.19.3-0.7.0.4-beta.1]
### Added
- New function `shield` to laser blade json model.

### Changed
- Update to Minecraft 1.19.3.
- Require Fabric API 0.69.1+1.19.3+.
- Require Cloth Config 9.0.94+.
- ToLaserBlade API and laser blade model interface.

### Fixed
- Laser blade models.

## [1.19.3-rc1-0.7.0.3-beta]
### Changed
- Update to Minecraft 1.19.3-rc1.
- Require Fabric API 0.68.1+1.19.3+.
- Require Cloth Config 9.0.93+.