@@ -8,12 +8,17 @@ import com.github.iunius118.tolaserblade.client.particle.LaserTrapParticle;
 import com.github.iunius118.tolaserblade.client.renderer.item.LBSwordItemRenderer;
 import com.github.iunius118.tolaserblade.client.renderer.item.model.LaserBladeModelLoadingPlugin;
 import com.github.iunius118.tolaserblade.core.particle.ModParticleTypes;
+import com.github.iunius118.tolaserblade.integration.autoconfig.ModConfig;
 import com.github.iunius118.tolaserblade.world.item.ModItems;
+import me.shedaniel.autoconfig.AutoConfig;
 import net.fabricmc.fabric.api.client.model.loading.v1.ModelLoadingPlugin;
 import net.fabricmc.fabric.api.client.particle.v1.ParticleFactoryRegistry;
 import net.fabricmc.fabric.api.client.rendering.v1.BuiltinItemRendererRegistry;
 import net.fabricmc.fabric.api.client.rendering.v1.ColorProviderRegistry;
 import net.minecraft.core.Direction;
+import net.minecraft.world.item.Item;
+
+import java.util.List;
 
 public class ClientRegister {
     public static void registerColorProvider() {
@@ -31,8 +36,9 @@ public class ClientRegister {
     }
 
     public static void registerItemRenderer() {
-        BuiltinItemRendererRegistry.INSTANCE.register(ModItems.LASER_BLADE, new LBSwordItemRenderer());
-        BuiltinItemRendererRegistry.INSTANCE.register(ModItems.LASER_BLADE_FP, new LBSwordItemRenderer());
+        ModConfig config = AutoConfig.getConfigHolder(ModConfig.class).getConfig();
+        List<Item> laserBladeItems = config.getLaserBladeItems();
+        laserBladeItems.forEach(item -> BuiltinItemRendererRegistry.INSTANCE.register(item, new LBSwordItemRenderer()));
     }
 
     public static void registerParticleProviders() {
