@@ -3,6 +3,9 @@
 [Source](https://github.com/Iunius118/ToLaserBlade-Fabric).
 
 ## [Unreleased]
+### Added
+- New client config item `laserBlades` to specify laser blade items for renderer.
+
 ### Changed
 - Require Fabric Loader 0.14.23+ and Fabric API 0.90.0+.
 
